v1.4.0 & fix top_n_tokens & 069895b
